fix: mouse icon size on mobile version

--- a/src/stylus/_media.styl
+++ b/src/stylus/_media.styl
@@ -199,6 +199,8 @@
     display flex
     justify-content: center
     min-height 100vh
+    &__mouse
+      height: 26px
     &__top
       display none
     &__title
